--- a/client/app-project/src/app/component/admin-home/admin-home.component.html
+++ b/client/app-project/src/app/component/admin-home/admin-home.component.html
@@ -34,8 +34,8 @@
 
             <div id="collapseZero" class="collapse" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="dashboard/management/user/form">Crear Usuario</a>
-                    <a class="collapse-item" href="dashboard/management/user/list">Lista de Usuarios</a>
+                    <a class="collapse-item" href="dashboard/user/form">Crear Usuario</a>
+                    <a class="collapse-item" href="dashboard/user/list">Lista de Usuarios</a>
                 </div>
             </div>
 
