--- a/client/app-project/src/app/component/check-out/check-out.component.css
+++ b/client/app-project/src/app/component/check-out/check-out.component.css
@@ -1,5 +1,8 @@
 .input{
-    border: 0;
+    border-bottom:1px solid rgb(182, 182, 182);
+    border-top: 0;
+    border-right: 0;
+    border-left: 0;
     width: 4rem;
 }
 
@@ -25,7 +28,7 @@
     font-size: 2rem;
 }
 
-.error h2, p, h4{
+.error h2, h4{
     font-size: 1.3rem;
     margin-top: 2%;
 }
