--- a/client/app-project/src/app/component/check-out/check-out.component.html
+++ b/client/app-project/src/app/component/check-out/check-out.component.html
@@ -26,7 +26,7 @@
                                         <td>{{ x.hora }}</td>
                                         <td>${{ x.precio }}</td>
                                         <td><input type="number" class="input" min="1" max="10"
-                                                (click)="agregarAsiento(x._id)"></td>
+                                                (change)="agregarAsiento(x._id, 1)"></td>
                                         <td>
                                             <a class="btn btn-danger btn-sm d-inline-block"
                                                 (click)="deleteVueloAgregado(x._id)">
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="d-grid mt-4 mb-4 col-lg-6 col-md-4 col-5 mx-auto">
-                    <a class="btn btn-primary" href="/pago">Confirmar Compra</a>
+                    <a class="btn btn-primary" (click)="confirmarCompra()">Confirmar Compra</a>
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
                     <h1>Oh no!</h1>
                     <h2>A ocurrido un error.</h2>
                     <h4>La página que estas buscando necesita mas información para poder ser vista.</h4>
-                    <a class="btn btn-primary" href="/">Inicio</a>
+                    <a class="btn btn-primary" (click)="goBack()">Volver</a>
                 </div>
             </div>
         </div>
