--- a/client/app-project/src/app/component/admin-home/admin-home.component.html
+++ b/client/app-project/src/app/component/admin-home/admin-home.component.html
@@ -73,8 +73,8 @@
 
             <div id="collapseThree" class="collapse" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="dashboard/management/compra/form">Crear Compra</a>
-                    <a class="collapse-item" href="dashboard/management/compra/list">Lista de Compras</a>
+                    <a class="collapse-item" href="dashboard/compra/form">Crear Compra</a>
+                    <a class="collapse-item" href="dashboard/compra/list">Lista de Compras</a>
                 </div>
             </div>
 
