--- a/client/app-project/src/app/component/managements/compra/compra-list/compra-list.component.html
+++ b/client/app-project/src/app/component/managements/compra/compra-list/compra-list.component.html
@@ -22,9 +22,9 @@
 
                    <td>{{x.Usuario.name}}</td>
                    <td>{{x.Cantidad}}</td>
-                   <td>{{x.Subtotal}}</td>
-                   <td>{{x.Descuento}}</td>
-                   <td>{{x.MontoTotal}}</td>
+                   <td>{{x.Subtotal| number:'1.2'}}</td>
+                   <td>{{x.Descuento | number:'1.2'}}</td>
+                   <td>{{x.MontoTotal| number:'1.2'}}</td>
 
 
                       <td>
