--- a/client/app-project/src/app/component/pago/pago.component.html
+++ b/client/app-project/src/app/component/pago/pago.component.html
@@ -48,12 +48,23 @@
             </div>
         </div>
     </div>
-    <div class="align-self-center error">
-      <div>
+    <div class="align-self-center row">
+      <div class="col-2">
 
-          <h4>Puedes regresar al inicio del sitio dando click aqui abajo.</h4>
-          <a class="btn btn-primary" href="">Volver</a>
+
+          <a class="btn btn-primary" (click)="goBack()">Volver</a>
+
       </div>
-  </div>
+     <div class="col-2 offset-md-1">
+
+      <h4>Puedes regresar al inicio del sitio dando click aqui abajo.</h4>
+          <a class="btn btn-primary" href="">Inicio</a>
+
+      </div>
+      <div class="col-2 offset-md-1">
+
+        <a class="btn btn-success" (click)="makePayment()">Pagar</a>
+
+       
 </div>
 
