--- a/client/app-project/src/app/component/pago/pago.component.html
+++ b/client/app-project/src/app/component/pago/pago.component.html
@@ -63,8 +63,8 @@
       </div>
       <div class="col-2 offset-md-1">
 
-        <a class="btn btn-success" (click)="makePayment()">Pagar</a>
+        <a class="btn btn-success" (click)="makePayment()" ngClass="(pagar? :disabled)">Pagar</a>
 
-       
+
 </div>
 
