--- a/client/app-project/src/app/component/check-out/check-out.component.html
+++ b/client/app-project/src/app/component/check-out/check-out.component.html
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="d-grid mt-4 mb-4 col-lg-6 col-md-4 col-5 mx-auto">
-                    <a class="btn btn-primary" (click)="confirmarCompra()">Confirmar Compra</a>
+                    <a class="btn btn-primary" (click)="confirmarCompra()">Realizar Pago</a>
                 </div>
             </div>
         </div>
