--- a/client/app-project/src/app/component/results/results.component.html
+++ b/client/app-project/src/app/component/results/results.component.html
@@ -57,7 +57,7 @@
                 </div>
                 <div *ngIf="vuelosAgregados.length>0">
                     <div class="d-grid col-lg-3 mb-4 col-4 mx-auto">
-                        <a class="btn btn-primary" href="/checkout">Check-Out</a>
+                        <a class="btn btn-primary" href="/checkout">Confirmar Compra</a>
                     </div>
                 </div>
             </ng-template>
