--- a/client/app-project/src/app/component/pago/pago.component.css
+++ b/client/app-project/src/app/component/pago/pago.component.css
@@ -7,3 +7,8 @@ background: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, F
 width: 100vw;
 height: 100vh;
 }
+
+.contenedor{
+  margin: 0 auto;
+  width: 55%;
+}
